# gemini-army

./: .gitignore  Dockerfile  README.md  app.py  build.sh  config.py  config.yaml  gemini.py  install_pydantic.sh  main.py  pyproject.toml  requirements.txt  run.sh
docs/: fastapi-vercel-deployment-issues.md
test_scripts/: README.md  test_all.sh  test_generate.sh  test_health.sh  test_models.sh
