[project]
name = "gemini-army"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.59.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]

[tool.vercel.scripts]
build = "uv pip install --platform manylinux2014_x86_64 --target package --implementation cp --python-version 3.12 --only-binary=:all: --upgrade pydantic"